--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-PyMongo==2.3.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gTTS==2.2.2
 gunicorn==20.0.4
 idna==2.10
 isort==5.4.2
@@ -31,6 +32,8 @@ mongoengine==0.22.1
 numpy==1.19.1
 pandas==1.2.1
 Pillow==8.1.0
+praw==7.2.0
+prawcore==2.0.0
 psycopg2-binary==2.8.6
 pylint==2.6.0
 pymongo==3.11.2
@@ -52,7 +55,9 @@ svgwrite==1.4.1
 toml==0.10.1
 Tree==0.2.4
 typed-ast==1.4.1
+update-checker==0.18.0
 urllib3==1.25.10
+websocket-client==0.58.0
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.3
